--- a/.config/dependencies-common.toml
+++ b/.config/dependencies-common.toml
@@ -7,17 +7,16 @@ java-major = "11"
 java = "11"
 config-plugin = "0.1.0"
 # official library
-kotlin = "1.5.31"
-kotlin-coroutines = "1.5.2"
+kotlin = "1.6.0"
+kotlin-coroutines = "1.6.0-RC2"
 ktor = "1.6.7"
-android-plugin = "7.0.3"
-androidx-core = "1.6.0"
-androidx-appcompat = "1.3.1"
+android-plugin = "7.0.4"
+androidx-appcompat = "1.4.0"
 lifecycle = "2.3.1"
-compose = "1.1.0-beta02"
+compose = "1.1.0-beta04"
 accompanist = "0.21.2-beta"
 hilt = "2.40.5"
-hilt-compose = "1.0.0-alpha03"
+hilt-compose = "1.0.0-beta01"
 room = "2.3.0"
 # test
 junit = "4.13.2"
@@ -38,12 +37,12 @@ ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 plugin-source-android = { module = "com.android.tools.build:gradle", version.ref = "android-plugin" }
 plugin-source-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 # compose
-androidx-activity-compose = "androidx.activity:activity-compose:1.3.1"
+androidx-activity-compose = "androidx.activity:activity-compose:1.4.0"
 compose-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
-compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
+compose-material = { module = "androidx.compose.material3:material3", version = "1.0.0-alpha02" }
 compose-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
-compose-paging = "androidx.paging:paging-compose:1.0.0-alpha11"
-compose-navigation = "androidx.navigation:navigation-compose:2.4.0-alpha04"
+compose-paging = "androidx.paging:paging-compose:1.0.0-alpha14"
+compose-navigation = "androidx.navigation:navigation-compose:2.4.0-beta02"
 compose-flowLayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanist" }
 compose-navigationAnimiaton = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
 compose-placeholder = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanist" }
