--- a/.config/dependencies-common.toml
+++ b/.config/dependencies-common.toml
@@ -5,10 +5,10 @@ minSdk = "21"
 targetSdk = "31"
 java-major = "11"
 java = "11"
-config-plugin = "0.1.2"
+config-plugin = "0.1.3"
 # official library
-kotlin = "1.6.0"
-kotlin-coroutines = "1.6.0-RC2"
+kotlin = "1.7.10"
+kotlin-coroutines = "1.6.4"
 ktor = "1.6.7"
 android-plugin = "7.2.2"
 androidx-appcompat = "1.4.0"
