--- a/.config/dependencies-common.toml
+++ b/.config/dependencies-common.toml
@@ -13,7 +13,8 @@ ktor = "1.6.7"
 android-plugin = "7.2.2"
 androidx-appcompat = "1.4.0"
 lifecycle = "2.3.1"
-compose = "1.1.0-beta04"
+compose = "1.2.1"
+compose-compiler = "1.3.1"
 accompanist = "0.21.2-beta"
 hilt = "2.40.5"
 hilt-compose = "1.0.0-beta01"
