--- a/.config/dependencies-common.toml
+++ b/.config/dependencies-common.toml
@@ -1,6 +1,6 @@
 [versions]
 # build config
-compileSdk = "31"
+compileSdk = "33"
 minSdk = "21"
 targetSdk = "31"
 java-major = "11"
@@ -11,13 +11,13 @@ kotlin = "1.7.10"
 kotlin-coroutines = "1.6.4"
 ktor = "1.6.7"
 android-plugin = "7.2.2"
-androidx-appcompat = "1.4.0"
-lifecycle = "2.3.1"
+androidx-appcompat = "1.5.1"
+lifecycle = "2.5.1"
 compose = "1.2.1"
 compose-compiler = "1.3.1"
 accompanist = "0.21.2-beta"
-hilt = "2.40.5"
-hilt-compose = "1.0.0-beta01"
+hilt = "2.43.2"
+hilt-compose = "1.0.0"
 room = "2.3.0"
 # test
 junit = "4.13.2"
@@ -29,7 +29,7 @@ mockk = "1.11.0"
 [libraries]
 # official library
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
-androidx-lifecycle-runtime-ktx = "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+androidx-lifecycle-runtime-ktx = "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 kotlin-stdlib-jdk7 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk7", version.ref = "kotlin" }
 kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin-coroutines" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
@@ -38,7 +38,7 @@ ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 plugin-source-android = { module = "com.android.tools.build:gradle", version.ref = "android-plugin" }
 plugin-source-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 # compose
-androidx-activity-compose = "androidx.activity:activity-compose:1.4.0"
+androidx-activity-compose = "androidx.activity:activity-compose:1.5.1"
 compose-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 compose-material = { module = "androidx.compose.material3:material3", version = "1.0.0-alpha02" }
 compose-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
