Fix bug of kapt.

--- a/.config/dependencies-common.toml
+++ b/.config/dependencies-common.toml
@@ -6,6 +6,7 @@ java = "11"
 config-plugin = "0.1.9"
 # kotlin
 kotlin = "1.7.10"
+kotlin-ksp = "1.7.10-1.0.6"
 kotlin-serialization = "1.4.0"
 kotlin-coroutines = "1.6.4"
 ktor = "2.1.1"
@@ -69,16 +70,14 @@ rxandroid = "2.1.1"
 fastjson = "1.2.83"
 okio = "3.2.0"
 commons-io = "2.0.1"
-rxcache-runtime = "1.8.1-2.x"
-rxcache-gson = "0.0.4"
 retrofit = "2.8.1"
 retrofit-converter-fastjson = "1.2"
 okhttp = "3.12.12.11"
-glide = "4.12.0"
-glide-webpdecoder = "2.0.4.12.0"
-glide-transformations = "3.0.1"
+glide = "4.13.2"
+glide-webpdecoder = "2.1.4.13.2"
+glide-transformations = "4.3.0"
 svgaplayer = "2.4.7"
-utilcode = "1.30.0"
+utilcode = "1.30.7"
 expandabletextview = "0.1.4"
 switchbutton = "2.1.0"
 flycoTabLayout = "2.2.0"
@@ -168,8 +167,8 @@ androidx-activity-compose = { module = "androidx.activity:activity-compose", ver
 compose-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 compose-material = { module = "androidx.compose.material3:material3", version.ref = "compose-meterial" }
 compose-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
-compose-paging = { module = "androidx.paging:paging-compose", version = "compose-paging" }
-compose-navigation = { module = "androidx.navigation:navigation-compose", version = "compose-navigation" }
+compose-paging = { module = "androidx.paging:paging-compose", version.ref = "compose-paging" }
+compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "compose-navigation" }
 compose-flowLayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanist" }
 compose-navigationAnimiaton = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
 compose-placeholder = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanist" }
@@ -212,8 +211,6 @@ bugly-upgrade = { module = "com.tencent.bugly:crashreport_upgrade", version.ref 
 mmkv = { module = "com.tencent:mmkv-static", version.ref = "mmkv" }
 coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 rxandroid = { module = "io.reactivex.rxjava2:rxandroid", version.ref = "rxandroid" }
-rxcache-runtime = { module = "com.github.VictorAlbertos.RxCache:runtime", version.ref = "rxcache-runtime" }
-rxcache-gson = { module = "com.github.VictorAlbertos.Jolyglot:gson", version.ref = "rxcache-gson" }
 fastjson = { module = "com.alibaba:fastjson", version.ref = "fastjson" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-adapter-rxjava = { module = "com.squareup.retrofit2:adapter-rxjava2", version.ref = "retrofit" }
@@ -277,6 +274,7 @@ android-library = { id = "com.android.library", version.ref = "android-plugin" }
 java-library = { id = "org.gradle.java-library" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlin-ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
