--- a/.config/dependencies-common.toml
+++ b/.config/dependencies-common.toml
@@ -3,9 +3,10 @@
 compileSdk = "33"
 java-major = "11"
 java = "11"
-config-plugin = "0.1.13"
+config-plugin = "0.1.14"
 # kotlin
 kotlin = "1.7.10"
+kotlin-dsl = "3.1.0"
 kotlin-ksp = "1.7.10-1.0.6"
 kotlin-serialization = "1.4.0"
 kotlin-coroutines = "1.6.4"
@@ -17,6 +18,7 @@ spotless = "6.11.0"
 ktlint = "11.0.0"
 dependencies-update = "0.42.0"
 booster = "4.13.0"
+rocketx = "1.1.1"
 # androidx
 androidx-appcompat = "1.5.1"
 androidx-annotation = "1.5.0"
@@ -29,6 +31,7 @@ androidx-hilt-compose = "1.0.0"
 androidx-cardview = "1.0.0"
 androidx-recyclerview = "1.2.1"
 androidx-swiperefreshlayout = "1.1.0"
+androidx-viewpager = "1.1.0-alpha01"
 androidx-viewpager2 = "1.1.0-beta01"
 androidx-transition-ktx = "1.4.1"
 androidx-media2 = "1.2.1"
@@ -37,6 +40,8 @@ androidx-media3-ffmpeg = "0.1.0"
 androidx-multidex = "2.0.1"
 androidx-exifinterface = "1.3.3"
 androidx-activity-compose = "1.5.1"
+androidx-localbroadcastmanager = "1.1.0"
+androidx-legacy-support-core-utils = "1.0.0"
 exoplayer = "2.17.1"
 # ui
 androidx-constraintlayout = "2.1.4"
@@ -66,14 +71,15 @@ bugly-upgrade = "1.6.1"
 mmkv = "1.2.14"
 hilt-compose-navigation-factory = "1.2.0"
 coil = "2.2.1"
+guava = "31.1-android"
 rxandroid = "2.1.1"
 fastjson = "1.2.83"
 okio = "3.2.0"
 commons-io = "2.0.1"
 retrofit = "2.8.1"
 retrofit-converter-fastjson = "1.2"
-okhttp = "3.12.12.11"
-glide = "4.13.2"
+okhttp = "4.10.0"
+glide = "4.14.1"
 glide-webpdecoder = "2.1.4.13.2"
 glide-transformations = "4.3.0"
 svgaplayer = "2.4.7"
@@ -99,8 +105,8 @@ rxpermission = "0.11"
 tbssdk = "44226"
 tinker = "1.9.14.25.1"
 bolts = "1.4.0"
-epoxy = "5.0.0-beta03"
-mavericks = "2.7.0"
+epoxy = "5.0.0"
+mavericks = "3.0.1"
 debug-db = "1.0.3"
 leakcanary = "2.9.1"
 stetho = "1.6.0"
@@ -108,6 +114,8 @@ codelocator = "2.0.0"
 koom = "2.2.1"
 javassist = "3.29.2-GA"
 auto-service = "1.0.1"
+lint-api = "30.3.0"
+lint-checks = "30.3.0"
 
 [libraries]
 # androidx
@@ -127,6 +135,7 @@ androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref =
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "androidx-cardview" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "androidx-recyclerview" }
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "androidx-swiperefreshlayout" }
+androidx-viewpager = { module = "androidx.viewpager:viewpager", version.ref = "androidx-viewpager" }
 androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "androidx-viewpager2" }
 androidx-transition-ktx = { module = "androidx.transition:transition-ktx", version.ref = "androidx-transition-ktx" }
 androidx-media2 = { module = "androidx.media2:media2-session", version.ref = "androidx-media2" }
@@ -138,6 +147,8 @@ androidx-media3-datasource-okhttp = { module = "androidx.media3:media3-datasourc
 androidx-media3-decoder-ffmpeg = { module = "com.missevan.lib.common.player.decoder:ffmpeg", version.ref = "androidx-media3-ffmpeg" }
 androidx-multidex = { module = "androidx.multidex:multidex", version.ref = "androidx-multidex" }
 androidx-exifinterface = { module = "androidx.exifinterface:exifinterface", version.ref = "androidx-exifinterface" }
+androidx-localbroadcastmanager = { module = "androidx.localbroadcastmanager:localbroadcastmanager", version.ref = "androidx-localbroadcastmanager" }
+androidx-legacy-support-core-utils = { module = "androidx.legacy:legacy-support-core-utils", version.ref = "androidx-legacy-support-core-utils" }
 exoplayer-core = { module = "com.google.android.exoplayer:exoplayer-core", version.ref = "exoplayer" }
 exoplayer-ui = { module = "com.google.android.exoplayer:exoplayer-ui", version.ref = "exoplayer" }
 exoplayer-extension-mediasession = { module = "com.google.android.exoplayer:extension-mediasession", version.ref = "exoplayer" }
@@ -210,6 +221,7 @@ awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" 
 bugly-upgrade = { module = "com.tencent.bugly:crashreport_upgrade", version.ref = "bugly-upgrade" }
 mmkv = { module = "com.tencent:mmkv-static", version.ref = "mmkv" }
 coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
 rxandroid = { module = "io.reactivex.rxjava2:rxandroid", version.ref = "rxandroid" }
 fastjson = { module = "com.alibaba:fastjson", version.ref = "fastjson" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
@@ -222,6 +234,7 @@ okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp3-interceptor-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+glide-ksp = { module = "com.github.bumptech.glide:ksp", version.ref = "glide" }
 glide-okhttp3-integration = { module = "com.github.bumptech.glide:okhttp3-integration", version.ref = "glide" }
 glide-webpdecoder = { module = "com.github.zjupure:webpdecoder", version.ref = "glide-webpdecoder" }
 glide-transformations = { module = "jp.wasabeef:glide-transformations", version.ref = "glide-transformations" }
@@ -267,12 +280,15 @@ koom-leak-native = { module = "com.kuaishou.koom:koom-native-leak", version.ref 
 koom-leak-thread = { module = "com.kuaishou.koom:koom-thread-leak", version.ref = "koom" }
 koom-xhook = { module = "com.kuaishou.koom:xhook", version.ref = "koom" }
 javassist = { module = "org.javassist:javassist", version.ref = "javassist" }
+lint-api = { module = "com.android.tools.lint:lint-api", version.ref = "lint-api" }
+lint-checks = { module = "com.android.tools.lint:lint-checks", version.ref = "lint-checks" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-plugin" }
 android-library = { id = "com.android.library", version.ref = "android-plugin" }
 java-library = { id = "org.gradle.java-library" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-dsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlin-dsl" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlin-ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
@@ -286,6 +302,7 @@ config-plugin = { id = "com.jady.lib.config-plugin", version.ref = "config-plugi
 tinker = { id = "com.tencent.tinker.patch", version.ref = "tinker" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 booster = { id = "com.didiglobal.booster", version.ref = "booster" }
+rocketx = { id = "com.rocketx", version.ref = "rocketx" }
 
 [bundles]
 test = ["compose-test-junit4", "compose-test-manifest", "kotlin-coroutines-test"]
