--- a/.config/dependencies-android-common.toml
+++ b/.config/dependencies-android-common.toml
@@ -1,33 +1,30 @@
 [versions]
 # build config
-compileSdk = "33"
+compileSdk = "34"
 java-major = "11"
 java = "11"
-config-plugin = "0.1.14"
-# kotlin
-kotlin = "1.7.10"
-kotlin-dsl = "3.1.0"
-kotlin-ksp = "1.7.10-1.0.6"
-kotlin-serialization = "1.4.0"
-kotlin-coroutines = "1.6.4"
-ktor = "2.1.1"
+config-plugin = "0.1.16"
+# billing
+google-billing = "4.1.0"
 # plugin
-android-plugin = "7.2.2"
+# https://maven.google.com/web/index.html?q=build#com.android.tools.build:gradle
+android-plugin = "7.4.2"
+android-tools-common = "30.0.2"
+android-plugin-old = "4.1.1"
 bugly = "2.2.1"
 spotless = "6.11.0"
 ktlint = "11.0.0"
 dependencies-update = "0.42.0"
 booster = "4.13.0"
-rocketx = "1.1.1"
-gradle-publish = "1.0.0"
+gradle-publish = "1.2.1"
 # androidx
-androidx-appcompat = "1.5.1"
-androidx-annotation = "1.5.0"
-androidx-lifecycle-common = "2.5.1"
-androidx-core = "1.9.0"
+androidx-appcompat = "1.6.1"
+androidx-annotation = "1.6.0"
+androidx-lifecycle-common = "2.6.1"
+androidx-core = "1.10.1"
 androidx-collection = "1.2.0"
-androidx-fragment = "1.5.2"
-androidx-room = "2.4.3"
+androidx-fragment = "1.6.0"
+androidx-room = "2.5.2"
 androidx-hilt-compose = "1.0.0"
 androidx-cardview = "1.0.0"
 androidx-recyclerview = "1.2.1"
@@ -36,30 +33,23 @@ androidx-viewpager = "1.1.0-alpha01"
 androidx-viewpager2 = "1.1.0-beta01"
 androidx-transition-ktx = "1.4.1"
 androidx-media2 = "1.2.1"
-androidx-media3 = "1.0.0-beta02"
-androidx-media3-ffmpeg = "0.1.0"
+androidx-media3 = "1.1.0-rc01"
 androidx-multidex = "2.0.1"
-androidx-exifinterface = "1.3.3"
-androidx-activity-compose = "1.5.1"
+androidx-exifinterface = "1.3.6"
 androidx-localbroadcastmanager = "1.1.0"
 androidx-legacy-support-core-utils = "1.0.0"
-exoplayer = "2.17.1"
+androidx-sqlite = "2.3.1"
+exoplayer = "2.19.1"
 # ui
 androidx-constraintlayout = "2.1.4"
-compose = "1.2.1"
-compose-compiler = "1.3.1"
-compose-meterial = "1.0.0-beta02"
-compose-paging = "1.0.0-alpha16"
-compose-navigation = "1.0.2"
-material = "1.6.1"
-accompanist = "0.25.1"
+material = "1.9.0"
 # other official library
 hilt = "2.43.2"
 # test
 junit = "4.13.2"
-androidx-test = "1.4.0"
-androidx-test-ext = "1.1.3"
-androidx-test-espresso = "3.4.0"
+androidx-test = "1.5.0"
+androidx-test-ext = "1.1.5"
+androidx-test-espresso = "3.5.1"
 mockk = "1.11.0"
 kakao = "3.1.0"
 powermock = "2.0.9"
@@ -76,47 +66,50 @@ guava = "31.1-android"
 rxandroid = "2.1.1"
 fastjson = "1.2.83"
 okio = "3.2.0"
-commons-io = "2.0.1"
+commons-io = "2.11.0"
 retrofit = "2.8.1"
 retrofit-converter-fastjson = "1.2"
 okhttp = "4.10.0"
-glide = "4.14.1"
-glide-webpdecoder = "2.1.4.13.2"
+glide = "4.16.0"
 glide-transformations = "4.3.0"
-svgaplayer = "2.4.7"
+svgaplayer = "2.6.1"
+glide-compose = "1.0.0-alpha.5"
 utilcode = "1.30.7"
 expandabletextview = "0.1.4"
 switchbutton = "2.1.0"
-flycoTabLayout = "2.2.0"
-photoview = "2.0.0"
+flycoTabLayout = "3.0.0"
 android-gif-drawable = "1.2.9"
-richtext = "3.0.5"
-takephoto = "4.1.0"
+markdown = "1.0.5"
 wheelpicker = "1.1.2"
 magicindicator = "1.7.0"
 roundedimageview = "2.3.0"
-youth-banner = "1.4.10"
-recyclerview-adapter-helper = "2.9.50"
+recyclerview-adapter-helper = "3.0.14"
 sentry = "6.4.1"
 ormlite-android = "6.1"
 okdownload = "1.0.7"
 tinypinyin = "2.0.3"
 tray = "0.12.0"
 rxpermission = "0.11"
-tbssdk = "44226"
-tinker = "1.9.14.25.1"
+tbssdk = "44286"
+tinker = "1.9.14.25.3"
 bolts = "1.4.0"
-epoxy = "5.0.0"
-mavericks = "3.0.1"
+epoxy = "5.1.3"
+mavericks = "3.0.6"
 debug-db = "1.0.3"
-leakcanary = "2.9.1"
+leakcanary = "2.12"
 stetho = "1.6.0"
 codelocator = "2.0.0"
 koom = "2.2.1"
 javassist = "3.29.2-GA"
 auto-service = "1.0.1"
-lint-api = "30.3.0"
-lint-checks = "30.3.0"
+lint-api = "31.0.0"
+lint-checks = "31.0.0"
+database-sqlcipher = "4.5.2"
+checker-qual = "3.13.0"
+bitmap-monitor = "1.1.0"
+disklrucache = "2.0.2"
+gson = "2.10"
+zstd-jni = "1.5.5-5"
 
 [libraries]
 # androidx
@@ -124,6 +117,7 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle-common" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-reactivestreams-ktx = { module = "androidx.lifecycle:lifecycle-reactivestreams-ktx", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-service = { module = "androidx.lifecycle:lifecycle-service", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "androidx-lifecycle-common" }
@@ -145,45 +139,31 @@ androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", versi
 androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "androidx-media3" }
 androidx-media3-datasource-cronet = { module = "androidx.media3:media3-datasource-cronet", version.ref = "androidx-media3" }
 androidx-media3-datasource-okhttp = { module = "androidx.media3:media3-datasource-okhttp", version.ref = "androidx-media3" }
-androidx-media3-decoder-ffmpeg = { module = "com.missevan.lib.common.player.decoder:ffmpeg", version.ref = "androidx-media3-ffmpeg" }
 androidx-multidex = { module = "androidx.multidex:multidex", version.ref = "androidx-multidex" }
 androidx-exifinterface = { module = "androidx.exifinterface:exifinterface", version.ref = "androidx-exifinterface" }
 androidx-localbroadcastmanager = { module = "androidx.localbroadcastmanager:localbroadcastmanager", version.ref = "androidx-localbroadcastmanager" }
 androidx-legacy-support-core-utils = { module = "androidx.legacy:legacy-support-core-utils", version.ref = "androidx-legacy-support-core-utils" }
+androidx-sqlite = { module = "androidx.sqlite:sqlite", version.ref = "androidx-sqlite" }
+# ExoPlayer
 exoplayer-core = { module = "com.google.android.exoplayer:exoplayer-core", version.ref = "exoplayer" }
 exoplayer-ui = { module = "com.google.android.exoplayer:exoplayer-ui", version.ref = "exoplayer" }
 exoplayer-extension-mediasession = { module = "com.google.android.exoplayer:extension-mediasession", version.ref = "exoplayer" }
+exoplayer-extension-cronet = { module = "com.google.android.exoplayer:extension-cronet", version.ref = "exoplayer" }
 # ui
 constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "androidx-constraintlayout" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
-# kotlin
-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
-kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
-kotlin-script-runtime = { module = "org.jetbrains.kotlin:kotlin-script-runtime", version.ref = "kotlin" }
-kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization" }
-kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin-coroutines" }
-kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
-ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
-ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
-ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
+# billing
+google-billing = { module = "com.android.billingclient:billing-ktx", version.ref = "google-billing" }
 # plugin dependencies
 plugin-source-android = { module = "com.android.tools.build:gradle", version.ref = "android-plugin" }
-plugin-source-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+plugin-source-android-common = { module = "com.android.tools:common", version.ref = "android-tools-common" }
+plugin-source-android-ddmlib = { module = "com.android.tools.ddms:ddmlib", version.ref = "android-tools-common" }
+plugin-source-android-old = { module = "com.android.tools.build:gradle", version.ref = "android-plugin-old" }
 booster-api = { module = "com.didiglobal.booster:booster-api", version.ref = "booster" }
 booster-transform-asm = { module = "com.didiglobal.booster:booster-transform-asm", version.ref = "booster" }
 tinker-patch-lib = { module = "com.tencent.tinker:tinker-patch-lib", version.ref = "tinker" }
 tinker-patch-gradle-plugin = { module = "com.tencent.tinker:tinker-patch-gradle-plugin", version.ref = "tinker" }
 auto-service = { module = "com.google.auto.service:auto-service", version.ref = "auto-service" }
-# compose
-androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
-compose-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
-compose-material = { module = "androidx.compose.material3:material3", version.ref = "compose-meterial" }
-compose-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
-compose-paging = { module = "androidx.paging:paging-compose", version.ref = "compose-paging" }
-compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "compose-navigation" }
-compose-flowLayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanist" }
-compose-navigationAnimiaton = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
-compose-placeholder = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanist" }
 # hilt
 hilt-runtime = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
@@ -202,10 +182,7 @@ espresso-intents = { module = "androidx.test.espresso:espresso-intents", version
 espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "androidx-test-espresso" }
 androidx-orchestrator = { module = "androidx.test:orchestrator", version.ref = "androidx-test" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
-kotlin-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlin-coroutines" }
 hilt-androidTesting = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
-compose-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
-compose-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
 kakao = { module = "io.github.kakaocup:kakao", version.ref = "kakao" }
 powermock-module-junit4 = { module = "org.powermock:powermock-module-junit4", version.ref = "powermock" }
 powermock-module-junit4-rule = { module = "org.powermock:powermock-module-junit4-rule", version.ref = "powermock" }
@@ -215,7 +192,6 @@ robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectr
 robolectric-multidex = { module = "org.robolectric:shadows-multidex", version.ref = "robolectric" }
 robolectric-supportv4 = { module = "org.robolectric:shadows-supportv4", version.ref = "robolectric" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
-mock-webserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
 bcprov-jdk15on = { module = "org.bouncycastle:bcprov-jdk15on", version.ref = "bcprov-jdk15on" }
 awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" }
 # third party
@@ -231,28 +207,24 @@ retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", ve
 retrofit-converter-fastjson = { module = "com.github.BaronZ88:Retrofit2-FastJson-Converter", version.ref = "retrofit-converter-fastjson" }
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 commons-io = { module = "commons-io:commons-io", version.ref = "commons-io" }
-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
-okhttp3-interceptor-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 glide-ksp = { module = "com.github.bumptech.glide:ksp", version.ref = "glide" }
-glide-okhttp3-integration = { module = "com.github.bumptech.glide:okhttp3-integration", version.ref = "glide" }
-glide-webpdecoder = { module = "com.github.zjupure:webpdecoder", version.ref = "glide-webpdecoder" }
 glide-transformations = { module = "jp.wasabeef:glide-transformations", version.ref = "glide-transformations" }
-svgaplayer = { module = "com.github.yyued:SVGAPlayer-Android", version.ref = "svgaplayer" }
+glide-compose = { module = "com.github.bumptech.glide:compose", version.ref = "glide-compose" }
+glide-okhttp3-integration = { module = "com.github.bumptech.glide:okhttp3-integration", version.ref = "glide" }
+svgaplayer = { module = "com.github.svga:SVGAPlayer-Android", version.ref = "svgaplayer" }
 utilcode = { module = "com.blankj:utilcode", version.ref = "utilcode" }
 expandabletextview = { module = "com.ms-square:expandableTextView", version.ref = "expandabletextview" }
 switchbutton = { module = "com.kyleduo.switchbutton:library", version.ref = "switchbutton" }
-flycoTabLayout = { module = "com.flyco.tablayout:FlycoTabLayout_Lib", version.ref = "flycoTabLayout" }
-photoview = { module = "com.github.chrisbanes:PhotoView", version.ref = "photoview" }
+flycoTabLayout = { module = "io.github.h07000223:flycoTabLayout", version.ref = "flycoTabLayout" }
 android-gif-drawable = { module = "pl.droidsonroids.gif:android-gif-drawable", version.ref = "android-gif-drawable" }
-richtext = { module = "com.zzhoujay.richtext:richtext", version.ref = "richtext" }
-takephoto = { module = "org.devio.takephoto:takephoto_library", version.ref = "takephoto" }
+markdown = { module = "com.zzhoujay.markdown:markdown", version.ref = "markdown" }
+disklrucache = { module = "com.jakewharton:disklrucache", version.ref = "disklrucache" }
 wheelpicker = { module = "cn.aigestudio.wheelpicker:WheelPicker", version.ref = "wheelpicker" }
 magicindicator = { module = "com.github.hackware1993:MagicIndicator", version.ref = "magicindicator" }
 roundedimageview = { module = "com.makeramen:roundedimageview", version.ref = "roundedimageview" }
-youth-banner = { module = "com.youth.banner:banner", version.ref = "youth-banner" }
-recyclerview-adapter-helper = { module = "com.github.CymChad:BaseRecyclerViewAdapterHelper", version.ref = "recyclerview-adapter-helper" }
+recyclerview-adapter-helper = { module = "io.github.cymchad:BaseRecyclerViewAdapterHelper", version.ref = "recyclerview-adapter-helper" }
 sentry-android = { module = "io.sentry:sentry-android", version.ref = "sentry" }
 sentry-android-fragment = { module = "io.sentry:sentry-android-fragment", version.ref = "sentry" }
 sentry-android-okhttp = { module = "io.sentry:sentry-android-okhttp", version.ref = "sentry" }
@@ -271,44 +243,38 @@ bolts-tasks = { module = "com.parse.bolts:bolts-tasks", version.ref = "bolts" }
 epoxy = { module = "com.airbnb.android:epoxy", version.ref = "epoxy" }
 epoxy-processor = { module = "com.airbnb.android:epoxy-processor", version.ref = "epoxy" }
 mavericks = { module = "com.airbnb.android:mavericks", version.ref = "mavericks" }
-debug-db = { module = "com.amitshekhar.android:debug-db", version.ref = "debug-db" }
 leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary" }
 stetho = { module = "com.facebook.stetho:stetho", version.ref = "stetho" }
 stetho-okhttp3 = { module = "com.facebook.stetho:stetho-okhttp3", version.ref = "stetho" }
 codelocator = { module = "com.bytedance.tools.codelocator:codelocator-core", version.ref = "codelocator" }
-koom-leak-java = { module = "com.kuaishou.koom:koom-java-leak", version.ref = "koom" }
-koom-leak-native = { module = "com.kuaishou.koom:koom-native-leak", version.ref = "koom" }
-koom-leak-thread = { module = "com.kuaishou.koom:koom-thread-leak", version.ref = "koom" }
-koom-xhook = { module = "com.kuaishou.koom:xhook", version.ref = "koom" }
+koom-leak-java = { module = "com.kuaishou.koom:koom-java-leak-static", version.ref = "koom" }
+koom-leak-native = { module = "com.kuaishou.koom:koom-native-leak-static", version.ref = "koom" }
+koom-leak-thread = { module = "com.kuaishou.koom:koom-thread-leak-static", version.ref = "koom" }
+koom-xhook = { module = "com.kuaishou.koom:xhook-static", version.ref = "koom" }
 javassist = { module = "org.javassist:javassist", version.ref = "javassist" }
 lint-api = { module = "com.android.tools.lint:lint-api", version.ref = "lint-api" }
 lint-checks = { module = "com.android.tools.lint:lint-checks", version.ref = "lint-checks" }
+database-sqlcipher = { module = "net.zetetic:android-database-sqlcipher", version.ref = "database-sqlcipher" }
+checker-qual = { module = "org.checkerframework:checker-qual", version.ref = "checker-qual" }
+bitmap-monitor = { module = "io.github.shixinzhang:android-bitmap-monitor", version.ref = "bitmap-monitor" }
+bitmap-monitor-no-op = { module = "io.github.shixinzhang:android-bitmap-monitor-no-op", version.ref = "bitmap-monitor" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+zstd-jni = { module = "com.github.luben:zstd-jni", version.ref = "zstd-jni" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-plugin" }
 android-library = { id = "com.android.library", version.ref = "android-plugin" }
 java-library = { id = "org.gradle.java-library" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-dsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlin-dsl" }
-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
-kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlin-ksp" }
-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 bugly = { id = "bugly", version.ref = "bugly" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
 dependencies-update = { id = "com.github.ben-manes.versions", version = "dependencies-update" }
 hilt-android = { id = "dagger.hilt.android.plugin", version.ref = "hilt" }
-config-plugin = { id = "com.jady.lib.config-plugin", version.ref = "config-plugin" }
+config-plugin = { id = "io.github.jadyli.config-plugin", version.ref = "config-plugin" }
 tinker = { id = "com.tencent.tinker.patch", version.ref = "tinker" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 booster = { id = "com.didiglobal.booster", version.ref = "booster" }
-rocketx = { id = "com.rocketx", version.ref = "rocketx" }
 gradle-publish = { id = "com.gradle.plugin-publish", version.ref = "gradle-publish" }
 
 [bundles]
-test = ["compose-test-junit4", "compose-test-manifest", "kotlin-coroutines-test"]
-compose-core = ["androidx-activity-compose", "compose-uiTooling", "compose-material"]
-compose-navigation = ["compose-navigation", "compose-navigationAnimiaton", "hilt-navigation-compose", "hilt-compose-navigation-factory"]
-compose-jetpack = ["compose-paging"]
+hilt-navigation = ["hilt-navigation-compose", "hilt-compose-navigation-factory"]
 hilt-compiler = ["hilt-compiler", "hilt-compose-navigation-factory-compiler"]
